@@ -18,7 +18,7 @@ public class Main {
         }
 
         if (cmd.isVersion()) {
-            System.out.println(String.format("java version %s", "8"));
+            System.out.println("java version %i".formatted(8));
             return;
         }
 
